# grpc-messenger

./: .env.example  .gitignore  README.md  docker-compose.yml  envoy.yaml
backend/: .dockerignore  Dockerfile  README.md  init_db.py  main.py  pyproject.toml  seed_db.py  test_new_streaming.py  test_streaming_client.py
backend/messenger/: __init__.py
backend/messenger/config/: database.py
backend/messenger/models/: __init__.py  message.py  thread.py  user.py
backend/messenger/services/: __init__.py  auth_service.py  messaging_service.py
backend/messenger/utils/: auth.py
backend/protos/: auth.proto  messaging.proto
frontend/: .dockerignore  .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/auth/: LoginForm.tsx
frontend/src/components/messaging/: ChatPage.tsx  ChatView.tsx  CreateThreadModal.tsx  MessageInput.tsx  ThreadList.tsx
frontend/src/components/ui/: Button.tsx  ConnectionStatus.tsx  Input.tsx
frontend/src/hooks/: useAuth.ts  useMessageStream.ts  useMessages.ts  useThreads.ts
frontend/src/protos/: auth.proto  messaging.proto
frontend/src/services/: auth.ts  messageStreaming.ts  messaging.ts
frontend/src/store/: authStore.ts
frontend/src/types/: auth.ts  messaging.ts
